--- a/package.json
+++ b/package.json
@@ -13,15 +13,23 @@
   "dependencies": {
     "axios": "^0.19.0",
     "babel-preset-es2015": "^6.24.1",
+    "bootstrap": "^4.3.1",
+    "classnames": "^2.2.6",
+    "file-loader": "^4.0.0",
     "history": "^4.6.3",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
+    "primeicons": "^1.0.0",
+    "primereact": "^3.1.7",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-redux": "^5.0.5",
-    "react-router-dom": "^4.1.2",
+    "react-router-dom": "^4.4.0-beta.8",
+    "react-transition-group": "^2.2.1",
+    "reactstrap": "^8.0.0",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
-    "styled-components": "^4.3.2"
+    "styled-components": "^4.3.2",
+    "url-loader": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
